[gd_scene load_steps=2 format=3 uid="uid://test_integration"]

[ext_resource type="Script" path="res://scripts/tests/test_geoscape_integration.gd" id="1"]

[node name="TestGeoscapeIntegration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 50.0
text = "Geoscape Integration Test"
theme_override_font_sizes/font_size = 24

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 400.0
offset_bottom = 80.0
text = "Ready to run tests..."

[node name="TestOutput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 600.0
offset_bottom = 380.0
text = "Test output will appear here..."
editable = false
wrap_mode = 1

[node name="RunTestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 390.0
offset_right = 120.0
offset_bottom = 420.0
text = "Run Test"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 390.0
offset_right = 200.0
offset_bottom = 420.0
text = "Back"

[node name="Connections" type="Node" parent="."]

[connection signal="pressed" from="RunTestButton" to="." method="_on_run_test_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
